elixir/force-app/main/default/objects/ABN_Information__c/ABN_Information__c.object-meta.xml
<CustomObject>
    <label>ABN Information</label>
    <nameField>
        <label>ABN Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ABN Informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>