elixir/force-app/main/default/objects/ABN_Information__c/fields/Employment_Information__c.field-meta.xml
<CustomField>
    <fullName>Employment_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employment Information</label>
    <referenceTo>genesis__Employment_Information__c</referenceTo>
    <relationshipLabel>ABN Informations</relationshipLabel>
    <relationshipName>ABN_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>