elixir/force-app/main/default/objects/ABN_Information__c/fields/Entity_status_code__c.field-meta.xml
<CustomField>
    <fullName>Entity_status_code__c</fullName>
    <label>Entity status code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>