elixir/force-app/main/default/objects/ABN_Information__c/fields/Identifier_value__c.field-meta.xml
<CustomField>
    <fullName>Identifier_value__c</fullName>
    <label>Identifier value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>