elixir/force-app/main/default/objects/ABN_Information__c/fields/Party__c.field-meta.xml
<CustomField>
    <fullName>Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Party</label>
    <referenceTo>clcommon__Party__c</referenceTo>
    <relationshipLabel>ABN Informations</relationshipLabel>
    <relationshipName>ABN_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>